--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pipecat-ai/daily-transport": "^1.5.0",
     "@pipecat-ai/small-webrtc-transport": "^1.8.1",
     "@pipecat-ai/voice-ui-kit": "^0.7.1",
+    "@vitejs/plugin-basic-ssl": "^2.1.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
